bk_ida/bzip2ida/c3/BZ2_hbMakeCodeLengths
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:670:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v23 = _mm_cmpeq_epi32( v21, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:671:24: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v24 = _mm_cmpeq_epi32( ( __m128i)0LL, v22); 
                       ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:673:44: error: use of undeclared identifier 'xmmword_41B4B0'
si128 = _mm_load_si128( ( const __m128i *)&xmmword_41B4B0); 
                                           ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:685:42: error: use of undeclared identifier 'xmmword_41B4B0'
v12 = _mm_load_si128( ( const __m128i *)&xmmword_41B4B0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:690:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v15 = _mm_cmpeq_epi32( v13, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:691:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v16 = _mm_cmpeq_epi32( v14, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:700:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v19 = _mm_cmpeq_epi32( v17, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:701:29: error: invalid conversion between vector type '__m128i' (vector of 2 'long long' values) and integer type 'long long' of different size
v20 = _mm_cmpeq_epi32( v18, ( __m128i)0LL); 
                            ^~~~~~~~~~~~~
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:742:42: error: use of undeclared identifier 'xmmword_41B4C0'
v32 = _mm_load_si128( ( const __m128i *)&xmmword_41B4C0); 
                                         ^
/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/huffman.c:743:42: error: use of undeclared identifier 'xmmword_41B4B0'
v33 = _mm_load_si128( ( const __m128i *)&xmmword_41B4B0); 
                                         ^
10 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O3/bzip2-clang-O3/BZ2_hbMakeCodeLengths/src/obj/huffman.o] Error 1
